--- a/nunaliit2-js/src/main/webapp/nunaliit2/css/basic/n2.widget.css
+++ b/nunaliit2-js/src/main/webapp/nunaliit2/css/basic/n2.widget.css
@@ -196,7 +196,6 @@
 	position: absolute;
 	top: 33px;
 	right: 468px;
-	width: 200px;
 	text-align: right;
 	padding: 0;
 	margin: 0;
